tests/compile-fail/cases/nested_tainted_into_args.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<OsStr>` is not satisfied
 --> cases/nested_tainted_into_args.rs:8:31
  |
8 |     Command::new("/bin/true").args(v);
  |                               ^^^^ the trait `AsRef<OsStr>` is not implemented for `Tainted<Vec<u8>>`
  |
note: required by a bound in `Command::args`
 --> $RUST/std/src/process.rs
  |
  |     pub fn args<I, S>(&mut self, args: I) -> &mut Command
  |            ---- required by a bound in this associated function
...
  |         S: AsRef<OsStr>,
  |            ^^^^^^^^^^^^ required by this bound in `Command::args`
